Adding Angular Material and game-scores tab

--- a/GeoMaster-UI/src/app/app.component.html
+++ b/GeoMaster-UI/src/app/app.component.html
@@ -59,7 +59,7 @@
         </ul>
       </li>
       <li class="sidebar-item">
-        <a href="#" class="sidebar-link">
+        <a [routerLink]="['game-scores']" class="sidebar-link">
           <i class="lni lni-library"></i>
           <span>Best scores</span>
         </a>
