--- a/GeoMaster-UI/src/app/components/country-details/country-details.component.css
+++ b/GeoMaster-UI/src/app/components/country-details/country-details.component.css
@@ -27,3 +27,19 @@ img {
     right: 12%;
     transform: translateY(-50%);
 }
+
+.w-50 {
+    width: 50%;
+}
+
+.mb-3 {
+    margin-bottom: 1rem;
+}
+
+.mb-4 {
+    margin-bottom: 1.5rem;
+}
+
+.mt-2 {
+    margin-top: 1rem;
+}
