Add deleteing all game scores component

--- a/GeoMaster-UI/src/app/app.component.html
+++ b/GeoMaster-UI/src/app/app.component.html
@@ -65,7 +65,7 @@
         </a>
       </li>
       <li class="sidebar-item">
-        <a href="#" class="sidebar-link">
+        <a [routerLink]="['about-us']" class="sidebar-link">
           <i class="lni lni-support"></i>
           <span>About Us</span>
         </a>
