Adding City details component

--- a/GeoMaster-UI/src/app/app.component.html
+++ b/GeoMaster-UI/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <aside id="sidebar">
+  <aside id="sidebar" #sidebar>
     <div class="d-flex">
       <button class="toggle-btn" type="button">
         <i class="lni lni-grid-alt"></i>
